// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders correctly 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.css-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.css-t6vuyb-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.css-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.css-15hi38u-StyledTooltipReference {
  color: #390171;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
    <div
      class="css-a1981g-StyledContainer ed8izcl3"
    >
      <div
        class="css-sqaep6-StyledTagContainer ed8izcl1"
      >
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-describedby=":r0:"
        class="css-yb56yg-StyledChildrenContainer ep3agpf0"
        tabindex="0"
      >
        <span
          class="css-15hi38u-StyledTooltipReference ed8izcl2"
        >
          +1
        </span>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagList renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.css-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.css-t6vuyb-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div>
    <div
      class="css-a1981g-StyledContainer ed8izcl3"
    >
      <div
        class="css-sqaep6-StyledTagContainer ed8izcl1"
      >
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            scaleway
          </span>
        </span>
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            cloud
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.css-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.css-t6vuyb-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.css-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.css-15hi38u-StyledTooltipReference {
  color: #390171;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
    <div
      class="css-a1981g-StyledContainer ed8izcl3"
    >
      <div
        class="css-sqaep6-StyledTagContainer ed8izcl1"
      >
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            scaleway
          </span>
        </span>
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-describedby=":r1:"
        class="css-yb56yg-StyledChildrenContainer ep3agpf0"
        tabindex="0"
      >
        <span
          class="css-15hi38u-StyledTooltipReference ed8izcl2"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-sqaep6-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
}

.css-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.css-t6vuyb-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.css-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.css-15hi38u-StyledTooltipReference {
  color: #390171;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
    <div
      class="css-a1981g-StyledContainer ed8izcl3"
    >
      <div
        class="css-sqaep6-StyledTagContainer ed8izcl1"
      >
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-describedby=":r2:"
        class="css-yb56yg-StyledChildrenContainer ep3agpf0"
        tabindex="0"
      >
        <span
          class="css-15hi38u-StyledTooltipReference ed8izcl2"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList renders correctly with multiline 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1q3mcxl-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  gap: 8px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.css-t6vuyb-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.css-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.css-15hi38u-StyledTooltipReference {
  color: #390171;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
    <div
      class="css-a1981g-StyledContainer ed8izcl3"
    >
      <div
        class="css-1q3mcxl-StyledTagContainer ed8izcl1"
      >
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            scaleway
          </span>
        </span>
        <span
          class="css-1q42p0o-StyledContainer e1vt8sjg2"
        >
          <span
            aria-disabled="false"
            class="css-t6vuyb-StyledTag e1vt8sjg1"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-describedby=":r3:"
        class="css-yb56yg-StyledChildrenContainer ep3agpf0"
        tabindex="0"
      >
        <span
          class="css-15hi38u-StyledTooltipReference ed8izcl2"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
